fix page wrap bug

--- a/src/app/print/print.component.scss
+++ b/src/app/print/print.component.scss
@@ -5,5 +5,8 @@
   .--back-button {
     display: none;
   }
-
+  .--print-item {
+    page-break-after: always;
+  }
 }
+
